apps/generic/overlays/gotify/patches/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gotify
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
